fix spacing and up about.md

--- a/src/static/css/components/_markdown.scss
+++ b/src/static/css/components/_markdown.scss
@@ -2,7 +2,7 @@
 
 .markdown {
   p {
-    margin: auto;
+    margin: 0 auto 1.5em auto;
   }
 
   h1 {
